vbnc/vbnc/vbnc/tests/Errors/32007-6.vb
Class T
    Const M_Char_Char As Char = 1US
End Class